<resources>
    <string name="app_name">NYT News</string>
    <string name="app_name_full_label_project_1_nyt_news_app_showcase">Project 1: NYT News App</string>
    <string name="app_bar_label_today">News today</string>
    <string name="app_bar_label_top_story">Top Story</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_label_feeds">Feeds</string>
    <string name="bottom_nav_label_today">Today</string>
    <string name="bottom_nav_label_saved">Saved</string>
    <string name="bottom_nav_label_about_me">About Me</string>
    <string name="description_label_feeds_item_list_image">Feeds item list image</string>
    <string name="description_label_project_app_logo">Project app logo</string>
    <string name="item_list_label__text_title_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque sem non lectus fermentum molestie. Praesent rutrum et turpis eu.</string>
    <string name="item_list_label__text_title_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="item_list_label_section">World</string>
    <string name="item_list_label_time">25 Nov 07:47 PM</string>
    <string name="section_label_arts">Arts</string>
    <string name="section_label_automobiles">Automobiles</string>
    <string name="section_label_books">Books</string>
    <string name="section_label_briefing">Briefing</string>
    <string name="section_label_business">Business</string>
    <string name="section_label_climate">Climate</string>
    <string name="section_label_education">Education</string>
    <string name="section_label_fashion">Fashion</string>
    <string name="section_label_food">Food</string>
    <string name="section_label_guides">Guides</string>
    <string name="section_label_health">Health</string>
    <string name="section_label_lens">Lens</string>
    <string name="section_label_magazine">Magazine</string>
    <string name="section_label_movies">Movies</string>
    <string name="section_label_new_york">New York</string>
    <string name="section_label_obituaries">Obituaries</string>
    <string name="section_label_opinion">Opinion</string>
    <string name="section_label_parenting">Parenting</string>
    <string name="section_label_podcasts">Podcasts</string>
    <string name="section_label_reader_center">Reader Center</string>
    <string name="section_label_real_estate">Real Estate</string>
    <string name="section_label_science">Science</string>
    <string name="section_label_smarter_living">Smarter Living</string>
    <string name="section_label_sports">Sports</string>
    <string name="section_label_style">Style</string>
    <string name="section_label_sunday_review">Sunday Review</string>
    <string name="section_label_t_brand">T-Brand</string>
    <string name="section_label_t_magazine">T-Magazine</string>
    <string name="section_label_technology">Technology</string>
    <string name="section_label_the_learning_network">The Learning Network</string>
    <string name="section_label_upshot">Upshot</string>
    <string name="section_label_theater">Theater</string>
    <string name="section_label_time_insider">Time Insider</string>
    <string name="section_label_travel">Travel</string>
    <string name="section_label_u_s">U.S.</string>
    <string name="section_label_universal">Universal</string>
    <string name="section_label_well">Well</string>
    <string name="section_label_world">World</string>
    <string name="section_label_your_money">Your Money</string>
    <string name="section_label_default">Default</string>
    <string name="section_label_insider">Insider</string>
    <string name="section_label_politics">Politics</string>
    <string name="menu_title_label_sections">SECTIONS</string>
    <string name="menu_title_label_sources">SOURCES</string>
    <string name="menu_label_setting">Setting</string>
    <string name="menu_label_info">Info</string>
    <string name="menu_label_search">Search</string>
    <string name="menu_label_more">More</string>
    <string name="menu_label_delete">Delete</string>
    <string name="button_label_nyt">NYTIMES</string>
    <string name="button_label_inyt">INYTIMES</string>
    <string name="button_label_filter">Filters</string>
    <string name="button_label_refresh">Refresh</string>
    <string name="dialog_label_title_choose_theme">Choose Theme</string>
    <string name="dialog_label_light">Light</string>
    <string name="dialog_label_dark">Dark</string>
    <string name="dialog_label_default">Follow System Default</string>
    <string name="label_by_someone">BY Someone</string>
</resources>